--- a/CPU/CPU.qsf
+++ b/CPU/CPU.qsf
@@ -49,14 +49,6 @@ set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
-set_global_assignment -name VERILOG_FILE CPU.v
-set_global_assignment -name VERILOG_FILE ../RegFile/RegFile.v
-set_global_assignment -name VERILOG_FILE ../RAM/RAM_block.v
-set_global_assignment -name VERILOG_FILE Program_Counter.v
-set_global_assignment -name VERILOG_FILE ../RegFile/RegFile_Alu.v
-set_global_assignment -name VERILOG_FILE ../ALU/ALU.v
-set_global_assignment -name VERILOG_FILE CPU_FSM.v
-set_global_assignment -name VERILOG_FILE tb_CPU_FSM.v
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
@@ -64,14 +56,11 @@ set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH tb_CPU -section
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_CPU_FSM -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_CPU_FSM
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_CPU_FSM -section_id tb_CPU_FSM
-set_global_assignment -name VERILOG_FILE tb_CPU.v
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_CPU_FSM.v -section_id tb_CPU_FSM
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_CPU -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_CPU
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_CPU -section_id tb_CPU
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_CPU.v -section_id tb_CPU
-set_global_assignment -name VERILOG_FILE ../RAM/RAM.v
-set_global_assignment -name VERILOG_FILE CPU_Wrapper.v
 set_location_assignment PIN_AA15 -to btn_clk
 set_location_assignment PIN_Y16 -to btn_rst
 set_location_assignment PIN_AA25 -to out1A[6]
@@ -105,4 +94,18 @@ set_location_assignment PIN_AB23 -to out4A[0]
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
+set_global_assignment -name VERILOG_FILE sign_extender.v
+set_global_assignment -name VERILOG_FILE CPU.v
+set_global_assignment -name VERILOG_FILE ../RegFile/RegFile.v
+set_global_assignment -name VERILOG_FILE ../RAM/RAM_block.v
+set_global_assignment -name VERILOG_FILE Program_Counter.v
+set_global_assignment -name VERILOG_FILE ../RegFile/RegFile_Alu.v
+set_global_assignment -name VERILOG_FILE ../ALU/ALU.v
+set_global_assignment -name VERILOG_FILE CPU_FSM.v
+set_global_assignment -name VERILOG_FILE tb_CPU_FSM.v
+set_global_assignment -name VERILOG_FILE tb_CPU.v
+set_global_assignment -name VERILOG_FILE ../RAM/RAM.v
+set_global_assignment -name VERILOG_FILE CPU_Wrapper.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
